force-app/main/default/objects/Contact/fields/Feedback_do_treino__c.field-meta.xml
<CustomField>
    <fullName>Feedback_do_treino__c</fullName>
    <description>Todas as análises do treinamento do herói</description>
    <inlineHelpText>Análises do treinamento do herói</inlineHelpText>
    <label>Feedback do treino</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>