force-app/main/default/objects/Contact/fields/H_pr_qualifica_o__c.field-meta.xml
<CustomField>
    <fullName>H_pr_qualifica_o__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Há pré-qualificação?</label>
    <type>Checkbox</type>
</CustomField>