force-app/main/default/objects/Contact/fields/isTerraqueo__c.field-meta.xml
<CustomField>
    <fullName>isTerraqueo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para informar se o herói / vilão é da terra ou não</description>
    <inlineHelpText>É da Terra?</inlineHelpText>
    <label>É terráqueo?</label>
    <type>Checkbox</type>
</CustomField>