force-app/main/default/objects/Contact/fields/Nivel_de_poder__c.field-meta.xml
<CustomField>
    <fullName>Nivel_de_poder__c</fullName>
    <description>Informe de 1 a 10 o nivel de poder do vilão ou herói sendo 1 muito fraco e 10 muito forte</description>
    <inlineHelpText>Informe de 1 a 10 o nivel de poder do vilão ou herói sendo 1 muito fraco e 10 muito forte</inlineHelpText>
    <label>Nivel de poder</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NivelDePoder</valueSetName>
    </valueSet>
</CustomField>