force-app/main/default/objects/Contact/fields/NivelHeroi__c.field-meta.xml
<CustomField>
    <fullName>NivelHeroi__c</fullName>
    <label>Nivel do herói</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aspira</fullName>
            </value>
            <value>
                <fullName>Junior</fullName>
            </value>
            <value>
                <fullName>Pleno</fullName>
            </value>
            <value>
                <fullName>Senior</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>