force-app/main/default/objects/Contact/fields/NomeGuerra__c.field-meta.xml
<CustomField>
    <fullName>NomeGuerra__c</fullName>
    <description>Informar o nome de guerra do vilão ou herói</description>
    <inlineHelpText>Informar o nome de guerra do vilão ou herói</inlineHelpText>
    <label>Nome de guerra</label>
    <length>80</length>
    <type>Text</type>
</CustomField>