force-app/main/default/objects/Contact/fields/Planeta__c.field-meta.xml
<CustomField>
    <fullName>Planeta__c</fullName>
    <description>Informar o planeta de origem</description>
    <inlineHelpText>Caso não seja terraqueo, informe aqui o planeta</inlineHelpText>
    <label>Planeta</label>
    <length>80</length>
    <type>Text</type>
</CustomField>