force-app/main/default/objects/Contact/fields/Status_candidato__c.field-meta.xml
<CustomField>
    <fullName>Status_candidato__c</fullName>
    <label>Status candidato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Em análise</fullName>
            </value>
            <value>
                <fullName>Reprovado na análise</fullName>
            </value>
            <value>
                <fullName>Aguardadndo aprovação p/ treinamento</fullName>
            </value>
            <value>
                <fullName>Reprovado na análise do gestor</fullName>
            </value>
            <value>
                <fullName>Em treinamento</fullName>
            </value>
            <value>
                <fullName>Reprovado no treinamento</fullName>
            </value>
            <value>
                <fullName>Aprovado pelo treinamento</fullName>
            </value>
            <value>
                <fullName>Aprovado direto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>