force-app/main/default/objects/Contact/fields/TreinamentoAvaliado__c.field-meta.xml
<CustomField>
    <fullName>TreinamentoAvaliado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marcar se o treinamento do contato ja foi avaliado</description>
    <inlineHelpText>Marcar se caso o herói já foi avaliado</inlineHelpText>
    <label>Treinamento avaliado ?</label>
    <type>Checkbox</type>
</CustomField>