force-app/main/default/objects/Contact/recordTypes/Heroi.recordType-meta.xml
<RecordType>
    <fullName>Heroi</fullName>
    <active>true</active>
    <description>Contato do tipo herói</description>
    <label>Herói</label>
</RecordType>